# yoji

./: .gitignore  README.md  define.py  gen.py  gen_2.py  prep.py  prep_2.py  pyproject.toml  report.md  report.py  scrape.py  scraped_data.pickle  train.py  train_2.py  tune.py  tune_2.py  yoji_env.yml  yoji_out.txt  yoji_out_df_examples.csv
data/: Yojijukugo.html
outputs/: environment.yml  kj_df.csv  scraped_data.pickle  yoji_bg_out.txt  yoji_bg_out_df.csv  yoji_df_missing.csv  yoji_out_df.csv
